--- a/Flight simulator map/Flight simulator map/Flight simulator map.vcxproj
+++ b/Flight simulator map/Flight simulator map/Flight simulator map.vcxproj
@@ -148,11 +148,12 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="ChunkShader.cpp" />
+    <ClCompile Include="Config.cpp" />
     <ClCompile Include="Coordinate.cpp" />
     <ClCompile Include="CrashReporter.cpp" />
     <ClCompile Include="DynamicObject.cpp" />
     <ClCompile Include="ElevationData.cpp" />
-    <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="GraphicalEngine.cpp" />
     <ClCompile Include="GraphicalObject.cpp" />
     <ClCompile Include="HttpRequester.cpp" />
     <ClCompile Include="SatelliteImage.cpp" />
@@ -166,11 +167,12 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Chunk.h" />
     <ClInclude Include="ChunkShader.h" />
+    <ClInclude Include="Config.h" />
     <ClInclude Include="Coordinate.h" />
     <ClInclude Include="CrashReporter.h" />
     <ClInclude Include="DynamicObject.h" />
     <ClInclude Include="ElevationData.h" />
-    <ClInclude Include="Engine.h" />
+    <ClInclude Include="GraphicalEngine.h" />
     <ClInclude Include="Environment.h" />
     <ClInclude Include="GraphicalObject.h" />
     <ClInclude Include="HttpRequester.h" />
