--- a/Flight simulator map/Flight simulator map/Flight simulator map.vcxproj.filters
+++ b/Flight simulator map/Flight simulator map/Flight simulator map.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="GraphicalEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SatelliteImageMetadata.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SatelliteImage.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GraphicalEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SatelliteImageMetadata.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
