--- a/Flight simulator map/Flight simulator map/Flight simulator map.vcxproj
+++ b/Flight simulator map/Flight simulator map/Flight simulator map.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="StaticObject.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Vertex.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -185,6 +186,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="StaticObject.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
