--- a/Flight simulator map/Flight simulator map/Flight simulator map.vcxproj
+++ b/Flight simulator map/Flight simulator map/Flight simulator map.vcxproj
@@ -29,7 +29,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -71,7 +71,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\lukas\Desktop\inzynierka\Flight simulator map\include;C:\Program Files %28x86%29\GnuWin32\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\include;C:\Program Files %28x86%29\GnuWin32\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\lukas\Desktop\inzynierka\Flight simulator map\library;C:\Program Files %28x86%29\GnuWin32\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
